# percolator

./: .gitignore  Cargo.toml  README.md  kani_audit_final.tsv  kani_audit_full.tsv  spec.md
.github/sync-reports/: 2026-07-15.md
docs/roadmap/: ROADMAP.md
kani_audit_final2/: proofs.txt
kani_branch_cert/: proofs.txt  results.tsv
kani_close/: results.tsv  run.pid
kani_closure/: proofs.txt  results.tsv
kani_contracts/: proofs.txt  proofs_clearvc.txt  results.tsv
kani_frame/: results.tsv
kani_legs/: proofs.txt  results.tsv
kani_recert/: proofs.txt  results.tsv
kani_seq/: proofs.txt  results.tsv
kani_verify/: proofs.txt  results.tsv  run.pid
scripts/: actionable_class_coverage.py  arithmetic_axiom_manifest.md  arithmetic_axiom_manifest_check.py  arithmetic_policy.md  coverage_reconciliation.md  dead_kernel_check.py  engine_contract_manifest.py  engine_contracts.json  final_ci_gate.py  guard_mutation_sensitivity.py  kani_audit_certified.tsv  kernel-branch-certification.md  kernel_results.tsv  liveness_obligation_catalog.md  liveness_roster_enforcement.py  lof_transition_class_roster.py  nb2_continuation_matrix.py  no-dos-liveness.md  no-steal-theorem.md  no_lof_entrypoint_roster.py  no_lof_strength_roster.py  op_property_catalog.md  proof-frontier-closure.md  proof-strength-audit-results.md  route_fidelity_roster.py  spec-coverage.md  state_invariant_catalog.md  symbolic_assert_audit.py  validator_invariant_map.md  welded_discriminant_review.md
src/: lib.rs  v13.rs  v14.rs  v16.rs  v16_kani_api.rs  v16_proofs.rs
tests/: backing_double_claim_fuzz.proptest-regressions  backing_double_claim_fuzz.rs  proofs_v13.rs  proofs_v14.rs  proofs_v14_arithmetic.rs  proofs_v16.rs  proofs_v16_arithmetic.rs  reference_model_conformance.rs  rounding_residue_fuzz.proptest-regressions  rounding_residue_fuzz.rs  v13_spec_tests.rs  v14_fuzzing.rs  v14_spec_tests.rs  v16_fuzzing.rs  v16_spec_tests.rs
