[package]
name = "percolator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "percolator"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.23", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1.4"

[features]
default = []
test = []  # Enable test-only harness configuration
stress = []  # Reserved for stress/audit harnesses
fuzz = ["test"]  # Enable fuzzing tests (includes test feature for test_visible helpers)
audit-scan = []  # Enable full account-table invariant scans on public exits

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true

[profile.sbf]
inherits = "release"
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(target_os, values("solana"))',
] }

[workspace.metadata.kani]
flags = { tests = true }
unstable = { stubbing = true }

[[workspace.metadata.kani.proof]]
harness = ".*"
unwind = 70
